fixed semantic HTML tags

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                         class="img img--infrastructure" src="./images/illustration-phones.svg">
                 </picture>
                 <article class="article article--infrastructure">
-                    <heading class="heading heading--infrastructure">
+                    <header class="heading heading--infrastructure">
                         <h1 class="h1 h1--infrastructure">State of the Art Infrastucture</h1>
-                    </heading>
+                    </header>
                     <p class="p p--infrastructure">
                         With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
                         connectivity. This ensures your site will load instantly, no matter where your readers are,
@@ -189,9 +189,9 @@
             </picture>
             <div class="block block--rightTechnicalCont">
                 <article class="article article--technicalCont">
-                    <heading class="heading heading--technicalCont">
+                    <header class="heading heading--technicalCont">
                         <h1 class="h1 h1--technicalCont">Free, open, simple</h1>
-                    </heading>
+                    </header>
                     <p class="p p--technicalCont">
                         Blogr is a free and open source application backed by a large community of helpful developers.
                         It
@@ -202,9 +202,9 @@
                     </p>
                 </article>
                 <article class="article article--technicalCont">
-                    <heading class="heading heading--technicalCont">
+                    <header class="heading heading--technicalCont">
                         <h1 class="h1 h1--technicalCont">Powerful tooling</h1>
-                    </heading>
+                    </header>
                     <p class="p p--technicalCont">
                         Batteries included. We built a simple and straightforward CLI tool that makes customization and
                         deployment a breeze, but capable of producing even the most complicated sites.
